@@ -11,7 +11,7 @@
 - make result label in password checker wrap when text overflows
 - conditional wrapping of panel_applet_request_focus()
 - use unique dialog system in main app
-- use a locked/unlocked icon in the applet
+- improve usability details in applet (entry focus etc)
 
 0.5.x:
 - ensure complete UTF-8 support
