@@ -6,7 +6,7 @@
 #
 
 appicondir	= $(datadir)/icons/hicolor/48x48/apps
-appicon_DATA	= revelation.png
+appicon_DATA	= revelation.png revelation-locked.png
 
 mimeicondir	= $(datadir)/icons/hicolor/48x48/mimetypes
 mimeicon_DATA	= gnome-mime-application-x-revelation.png
